--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -17,7 +17,7 @@
             <div class="inner">
                 <h1 class="home_head">
                     <span class="home_title"></span>
-                    <a href="#this" class="quit_login fr">退出登录</a>
+                    <a href="login.html" class="quit_login fr">退出登录</a>
                 </h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar"/></span>
