--- a/webroot/mobile/html/jifen/html/login.html
+++ b/webroot/mobile/html/jifen/html/login.html
@@ -30,6 +30,10 @@
             </div>
         </div>
         <script type="text/javascript">
+            $.func.setCookie('nickName', '');
+            $.func.setCookie('userJiFen', '');
+            $.func.setCookie('headImgUrl', '');
+            $.func.setCookie('phone', '');
             $.func.login();
         </script>
     </body>
