--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -21,7 +21,12 @@
                 </h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar"/></span>
-                    <a href="javascript:void(0)" class="mobilenum" id="nickName">15013797469</a>
+                   
+                   <div class="home_head_info">
+                   	<a href="javascript:void(0)" class="mobilenum" id="nickName">15013797469</a>
+                   	<h1><span></span>20000 <i>积分</i></h1>
+                   </div>
+                    
                 </div>
             </div>
         </header>
@@ -37,7 +42,35 @@
                     <a href="allgoods.html" id="product"></a>
                 </div>
             </div>
-            <div class="home_infolist mt25 mb10">
+			<div class="home_exchange">
+				<div class="inner">
+					<div class="title">
+						<h1>兑换</h1></div>
+					<div class="con clearfix">
+						<div class="home_select_type">
+							<span>手机号码</span>
+							<input type="text" value="15013797469" />
+						</div>
+						<div class="home_select_type">
+							<span class="cm">串码</span>
+							<input type="text" value="aaaaaaaaaaa" />
+						</div>
+						<div class="home_select_type">
+							<span>选择金额</span>
+							<select name="mobile">
+								<option value="">20.0</option>
+								<option value="">100.0</option>
+								<option value="">20.0</option>
+								<option value="">100.0</option>
+							</select>
+						</div>
+					</div>
+					<div class="textcenter">
+						<a href="javascript:void(0)" class="submitbtn" >提交</a>
+					</div>
+				</div>
+			</div>
+            <!--<div class="home_infolist mt25 mb10">
                 <div class="inner home_top_con clearfix" id="exchange">
                     <span class="home_leftcon fl change">兑换</span>
                     <div class="changeinfo fr">
@@ -45,8 +78,8 @@
                         <a href="javascript:void(0)" class="submitbtn" >提交</a>
                     </div>
                 </div>
-            </div>
-            <div class="home_infolist  mb10">
+            </div>-->
+            <div class="home_infolist mt25  mb10">
                 <a href="integral_query.html" class="ablock">
                     <div class="inner home_top_con clearfix">
                         <span class="home_leftcon fl">积分查询</span>
