--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -124,7 +124,7 @@
                 $.func.chargeNo(chargePhone, chargeNo, chargeMoney);
             });
 
-            $('.close').on('click', function () {
+            $('.closed').on('click', function () {
                 $('.tips').hide();
             });
         </script>
