--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -23,7 +23,7 @@
                     <span class="imginfo"><img src="../images/tx.png" id="avatar"/></span>
 
                     <div class="home_head_info">
-                        <a href="javascript:void(0)" class="mobilenum" id="nickName">15013797469</a>
+                        <a href="javascript:void(0)" class="mobilenum" id="nickName"></a>
                         <h1><span id="jifen">0</span> 积分</h1>
                     </div>
 
@@ -35,11 +35,11 @@
                 <div class="itemtitle">
                     <div class="inner clearfix">
                         <span class="fl item_title_r_name">兑换商品</span>
-                        <a href="allgoods.html" class="fr color_items more">查看更多</a>
+                        <a href="javascript:void(0)" class="fr color_items more" id="more_product">查看更多</a>
                     </div>
                 </div>
                 <div class="items_con">
-                    <a href="allgoods.html" id="product"></a>
+                    <a href="javascript:void(0)" id="product"></a>
                 </div>
             </div>
             <div class="home_exchange">
@@ -122,12 +122,24 @@
             $('.submitbtn').on('click', function () {
                 var chargeNo = $('input[name="chargeNo"]').val();
                 var chargePhone = $('input[name="chargePhone"]').val();
+                var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
+                if(!reg.test(str)){
+                    alert('请填写正确的手机号码');
+                    return;
+                }
                 var chargeMoney = $('select').val();
                 $.func.chargeNo(chargePhone, chargeNo, chargeMoney);
             });
 
             $('.closed').on('click', function () {
                 $('.tips').hide();
+            });
+            
+            $('#product').on('click', function(){
+                $.func.checkjifen($('#jifen').html(), 'choose_good.html');
+            });
+            $('#more_product').on('click', function(){
+                $.func.checkjifen($('#jifen').html(), 'allgoods.html');
             });
         </script>
     </body>
