--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -123,7 +123,7 @@
                 var chargeNo = $('input[name="chargeNo"]').val();
                 var chargePhone = $('input[name="chargePhone"]').val();
                 var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
-                if(!reg.test(str)){
+                if(!reg.test(chargePhone)){
                     alert('请填写正确的手机号码');
                     return;
                 }
