--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -131,8 +131,9 @@
                     return;
                 }
                 var chargeNo = $('input[name="chargeNo"]').val();
+                console.log(chargeNo);
                 if(!chargeNo){
-                    alert('请填写串码')；
+                    alert('请填写串码');
                     return;
                 }
                 var chargeMoney = $('select').val();
