--- a/webroot/mobile/html/jifen/html/choose_good.html
+++ b/webroot/mobile/html/jifen/html/choose_good.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="inner">
-                <h1 class="logintitle">选择商品</h1>
+                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="history.go(-1)"></h1><h1>选择商品</h1>
             </div>
         </header>
         <div class="wraper mt8">
