--- a/webroot/mobile/html/jifen/html/order_query.html
+++ b/webroot/mobile/html/jifen/html/order_query.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="inner">
-                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="history.go(-1)"></h1><h1>订单查询</h1>
+                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="location.href='home.html'"></h1><h1>订单查询</h1>
                 <div class="order_total">
                     <span><i id="totalOrders">0</i>订单总计 ( 笔 )</span>
                     <span><i id="totalMoney">0</i>总计金额 ( 元 )</span>
