--- a/webroot/mobile/html/jifen/html/choose_good.html
+++ b/webroot/mobile/html/jifen/html/choose_good.html
@@ -23,8 +23,9 @@
                 <ul class="order_detail_item" id="goods">
                 </ul>
             </form>
-            <div class="inner">
-                <a href="javascript:void(0)" class='btn bg_items mt33 inner' id="submit">提交</a>
+            <div style="height:60px;"></div>
+            <div class="f_potion">
+                <a href="javascript:void(0)" class='btn bg_items' id="submit">提交</a>
             </div>
         </div>
         <script type="text/html" id="tpl">
