--- a/webroot/mobile/html/jifen/html/login.html
+++ b/webroot/mobile/html/jifen/html/login.html
@@ -22,7 +22,7 @@
             <div class="login_box">
                 <div class="inner">
                     <ul>
-                        <li class="username"><span>账号：</span><input type="number" id="username"  placeholder="请输入手机号"/></li>
+                        <li class="username"><span>账&nbsp;&nbsp;号：</span><input type="number" id="username"  placeholder="请输入手机号"/></li>
                         <li class="validate"><span>邀请码：</span><input type="number" id="valid" placeholder="邀请码(可不填)" /></li>
                     </ul>
                     <a href="javascript:void(0);" class="btn bg_items mt33" id="loginbtn">登 录</a>
