--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -42,7 +42,7 @@
                     <a href="javascript:void(0)" id="product"></a>
                 </div>
             </div>
-            <div class="home_exchange" style="bgcolor:white">
+            <div class="home_exchange" bgcolor="white">
                 <div class="inner">
                     <div class="title">
                         <h1>兑换</h1></div>
