--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -42,17 +42,18 @@
                     <a href="javascript:void(0)" id="product"></a>
                 </div>
             </div>
-            <div class="home_exchange" style="background-color: white">
+            <div class="home_exchange" style="background-color: white;">
                 <div class="inner">
-                    <div class="title">
-                        <h1>兑换</h1></div>
+                    <div class="title" style="padding-top: 0.8rem;">
+                        <h1>兑换</h1>
+                    </div>
                     <div class="con clearfix">
                         <div class="home_select_type">
                             <span>手机号码</span>
                             <input type="text" value="" name="chargePhone" />
                         </div>
                         <div class="home_select_type">
-                            <span class="cm">串码</span>
+                            <span class="cm">串&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</span>
                             <input type="text" value="" name="chargeNo" />
                         </div>
                         <div class="home_select_type">
@@ -61,7 +62,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="textcenter">
+                    <div class="textcenter" style="padding-bottom: 0.8rem;">
                         <a href="javascript:void(0)" class="submitbtn" >提交</a>
                     </div>
                 </div>
