--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -53,7 +53,7 @@
                             <input type="text" value="" name="chargePhone" />
                         </div>
                         <div class="home_select_type">
-                            <span class="cm">串&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</span>
+                            <span class="cm">串&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</span>
                             <input type="text" value="" name="chargeNo" />
                         </div>
                         <div class="home_select_type">
