--- a/webroot/mobile/html/jifen/html/choose_good.html
+++ b/webroot/mobile/html/jifen/html/choose_good.html
@@ -43,7 +43,9 @@
                     <!--                        <span>订单状态 &nbsp;&nbsp;: <i class="color_org">已完成</i></span>
                                             <span>订单日期  &nbsp;&nbsp;: <i class="color_gray">2016-10-20</i></span>-->
                 </div>
-                <div class="choosebtn fr"></div>
+                <div class="choosebtn fr">
+                	<span></span>
+                </div>
             </div>
         </li>
     </script>
