--- a/webroot/mobile/html/jifen/html/integral_query.html
+++ b/webroot/mobile/html/jifen/html/integral_query.html
@@ -21,19 +21,19 @@
         <div class="wraper">
             <!--移动积分-->
             <div class="ct">
-                <div class="title"><h3 class="inner"><span>中国移动</span>发送JF到1065899查询您的积分</h3></div>
+                <div class="title"><h3 class="inner"><span>中国移动</span><i id="中国移动">发送JF到1065899查询您的积分</i></h3></div>
                 <ul class="con" id="CMCC">
                 </ul>
             </div>
             <!--电信积分-->
             <div class="ct cucc">
-                <div class="title"><h3 class="inner"><span>中国电信</span>发送JF到10659858查询您的积分</h3></div>
+                <div class="title"><h3 class="inner"><span>中国电信</span><i id="中国电信">发送JF到10659858查询您的积分</i></h3></div>
                 <ul class="con" id="CT">
                 </ul>
             </div>
             <!--联通积分-->
             <div class="ct cmcc">
-                <div class="title"><h3 class="inner"><span>中国联通</span>发送105或cxjf到10010查询您的积分</h3></div>
+                <div class="title"><h3 class="inner"><span>中国联通</span><i id="中国联通">发送105或cxjf到10010查询您的积分</i></h3></div>
                 <ul class="con" id="CU">
                 </ul>
             </div>
