--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -87,7 +87,7 @@
             <div class="home_infolist mb10">
                 <a href="order_query.html" class="ablock">
                     <div class="inner home_top_con clearfix">
-                        <span class="home_leftcon fl bind">查询绑定</span>
+                        <span class="home_leftcon fl bind">订单查询</span>
                         <i class="home_rightico fr"></i>
                     </div>
                 </a>
