--- a/webroot/mobile/html/news-content.html
+++ b/webroot/mobile/html/news-content.html
@@ -29,15 +29,15 @@
 			<div class="transmitpage clearfix">
 				<div>
 					<h1><img src="../images/logo-wx.png"/></h1>
-					<h3>并购帮<span>并购人的生活方式</span></h3>
+					<h3><span>来这里 ，圈子就活了！</span></h3>
 				</div>
-				<a href="wx-download.html">立即下载</a>
+				<a href="wx-download.html" class="green-btn">立即下载</a>
 			</div>
 			<section class="newscon-box">
 				<h3>什么人适合做并购？什么人适合做并购？什么人适合做并购？什么人适合做并购？什么人适合做并购？</h3>
 				<!--add-->
 				<h1 class="con-des origin"><!--<span><img src="../images/user.png" /></span>王璟--><div class="website">【腾讯新闻】</div><time>2016.06.08 13:00</time></h1>
-				<div class="body-con">
+				<div class="body-con innercon">
 					
 				
 				<img src="../images/news-pic.jpg"/>
@@ -72,7 +72,7 @@
 							<b class="addnum">+1</b><i class="iconfont">&#xe61a;</i>398
 						</span>
 					</div>
-					<p>非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。</p>
+					<p class='a_bottom_comm'>非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。非常值得一读的文章。</p>
 				</div>
 				<div class="items">
 					<div class="comm-info clearfix">
@@ -85,7 +85,7 @@
 							<b class="addnum">+1</b><i class="iconfont">&#xe61a;</i>398
 						</span>
 					</div>
-					<p>非常值得一读的文章。</p>
+					<p class='a_bottom_comm'>非常值得一读的文章。</p>
 				</div>
 				<div class="items">
 					<div class="comm-info clearfix">
@@ -98,7 +98,7 @@
 							<b class="addnum">+1</b><i class="iconfont">&#xe61a;</i>398
 						</span>
 					</div>
-					<p>非常值得一读的文章。</p>
+					<p class='a_bottom_comm'>非常值得一读的文章。</p>
 				</div>
 				<div class="items no-bottom">
 					<div class="comm-info clearfix">
@@ -111,7 +111,7 @@
 							<b class="addnum">+1</b><i class="iconfont">&#xe61a;</i>398
 						</span>
 					</div>
-					<p>非常值得一读的文章。</p>
+					<p class='a_bottom_comm'>非常值得一读的文章。</p>
 				</div>
 			</section>
 			<!--专家推荐****************-->
@@ -154,7 +154,7 @@
 				<span class="iconfont" id="share">&#xe606;</span>
 			</div>
 			<!--底部四个图**end-->
-			<div class="reg-shadow" style="display: none;"></div>
+			<div class="reg-shadow"></div>
 			<div class="shadow-info a-shadow a-forword">
 				<ul>
 					<li><textarea type="text" placeholder="请输入评论"></textarea></li>
@@ -162,28 +162,10 @@
 					<li><a href="javascript:void(0);">取消</a><a href="javascript:void(0);">发表</a></li>
 				</ul>
 			</div>
-			<div class="wxshare" style="display: none;">
+			<div class="wxshare">
 				<span></span>
 				<p></p>
 			</div>
-		<!--<div class="alert">
-			已收藏
-		</div>-->
-	<script type="text/javascript">
-		cc = 1;
-		tt = 1;
-		$('body').on('click',function(e){
-			var target = e.srcElement || e.target,
-			em = target;
-            $('#share').html((cc++)+'click'+em.tagName);
-		})
-		$('body').on('tap',function(e){
-			var target = e.srcElement || e.target,
-			em = target, 
-			i = 1;
-             $('#tap').html((tt++)+'tap'+em.tagName);
-		})
-	</script>
-	
+
 	</body>
 </html>
