--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -20,7 +20,7 @@
                     <a href="login.html" class="quit_login fr">退出登录</a>
                 </h1>
                 <div class="home_user_info">
-                    <span class="imginfo"><img src="../images/tx.png" id="avatar"/></span>
+                    <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
 
                     <div class="home_head_info">
                         <a href="javascript:void(0)" class="mobilenum" id="nickName"></a>
