--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -15,10 +15,7 @@
     <body>
         <header>
             <div class="inner">
-                <h1 class="home_head">
-                    <span class="home_title"></span>
-                    <a href="login.html" class="quit_login fr">退出登录</a>
-                </h1>
+                <h1 class="home_head">积分换<a href="login.html" class="quit_login fr">退出登录</a></h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
 
