--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -32,7 +32,7 @@
                 <div class="itemtitle">
                     <div class="inner clearfix">
                         <span class="fl item_title_r_name">兑换商品</span>
-                        <a href="javascript:void(0)" class="fr color_items more" id="more_product">查看更多</a>
+                        <a href="allgoods.html" class="fr color_items more" >查看更多</a>
                     </div>
                 </div>
                 <div class="items_con">
@@ -144,9 +144,6 @@
             
             $('#product').on('click', function(){
                 $.func.checkjifen($('#jifen').html(), 'choose_good.html');
-            });
-            $('#more_product').on('click', function(){
-                $.func.checkjifen($('#jifen').html(), 'allgoods.html');
             });
         </script>
     </body>
