--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -5,7 +5,7 @@
         <meta name="format-detection" content="telephone=no, email=no" />
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title>积分换-个人主页</title>
         <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="home_exchange" style="background-color: white;">
-                <div class="inner">
+                <div class="inner" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
                     <div class="title" style="padding-top: 0.8rem;">
                         <h1>兑换</h1>
                     </div>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>-->
-            <div class="home_infolist mt25  mb10">
+            <div class="home_infolist mt25  mb10" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
                 <a href="integral_query.html" class="ablock">
                     <div class="inner home_top_con clearfix">
                         <span class="home_leftcon fl">积分查询</span>
@@ -81,7 +81,7 @@
                     </div>
                 </a>
             </div>
-            <div class="home_infolist mb10">
+            <div class="home_infolist mb10" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
                 <a href="order_query.html" class="ablock">
                     <div class="inner home_top_con clearfix">
                         <span class="home_leftcon fl bind">订单查询</span>
