--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -13,15 +13,15 @@
         <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
-        <header>
+        <header style="height: 173px;">
             <div class="inner">
-                <h1 class="home_head">积分换<a href="login.html" class="quit_login fr">退出登录</a></h1>
+                <h1 class="home_head" style="font-size: 22px;">积分换<a href="login.html" class="quit_login fr">退出登录</a></h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
 
                     <div class="home_head_info">
                         <a href="javascript:void(0)" class="mobilenum" id="nickName"></a>
-                        <h1><span id="jifen">0</span> 积分</h1>
+                        <h1 style="font-size: 14px;margin-top: 20px;text-align: left;padding-left: 29px;"><span id="jifen" style="font-size: 17px;">0</span> 积分</h1>
                     </div>
 
                 </div>
@@ -29,9 +29,10 @@
         </header>
         <div class="wraper">
             <div class="home_item">
-                <div class="itemtitle">
-                    <div class="inner clearfix">
-                        <span class="fl item_title_r_name">兑换商品</span>
+                <div class="itemtitle" style="margin-top: 4px;">
+                    <div style="width: 3px;height: 16px;background-color: #01c6fa;float: left;position: relative;top: 13px;left: 12px;"></div>
+                    <div class="inner clearfix" style="border-bottom:1px #ddd solid;border-top:1px #ddd solid;background-color: white;">
+                        <span class="fl item_title_r_name" style="font-size: 16px;">兑换商品</span>
                         <a href="allgoods.html" class="fr color_items more" >查看更多</a>
                     </div>
                 </div>
@@ -46,15 +47,15 @@
                     </div>
                     <div class="con clearfix">
                         <div class="home_select_type">
-                            <span>手机号码</span>
+                            <span class="fz16">手机号码</span>
                             <input type="text" value="" name="chargePhone" />
                         </div>
                         <div class="home_select_type">
-                            <span class="cm">串  码</span>
+                            <span class="cm fz16">串  码</span>
                             <input type="text" value="" name="chargeNo" />
                         </div>
                         <div class="home_select_type">
-                            <span>选择金额</span>
+                            <span class="fz16">选择金额</span>
                             <select name="mobile" id="chargeMoney">
                             </select>
                         </div>
@@ -73,18 +74,18 @@
                     </div>
                 </div>
             </div>-->
-            <div class="home_infolist mt25  mb10" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
+            <div class="home_infolist mt5 mb5" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
                 <a href="integral_query.html" class="ablock">
                     <div class="inner home_top_con clearfix">
-                        <span class="home_leftcon fl">积分查询</span>
+                        <span class="home_leftcon fl fz16">积分查询</span>
                         <i class="home_rightico fr"></i>
                     </div>
                 </a>
             </div>
-            <div class="home_infolist mb10" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
+            <div class="home_infolist mb5" style="border-top: 1px solid #dcdcdc;border-bottom: 1px solid #dcdcdc">
                 <a href="order_query.html" class="ablock">
                     <div class="inner home_top_con clearfix">
-                        <span class="home_leftcon fl bind">订单查询</span>
+                        <span class="home_leftcon fl bind fz16">订单查询</span>
                         <i class="home_rightico fr"></i>
                     </div>
                 </a>
