--- a/webroot/mobile/html/jifen/html/choose_good.html
+++ b/webroot/mobile/html/jifen/html/choose_good.html
@@ -37,8 +37,8 @@
             <div class="order_r_box clearfix">
                 <div class="l_order_des fl">
                     <h3>{#productName#}</h3>
-                    <span>虚拟货币 &nbsp;&nbsp;: <i class="color_org" id="money" money="{#exchangePrice#}">￥ {#exchangePrice#}</i></span>
-                    <span>商品描述 &nbsp;&nbsp;: <i class="color_org">{#productDetails#}</i></span>
+                    <span class="mb5">虚拟货币 &nbsp;&nbsp;: <i class="color_org" id="money" money="{#exchangePrice#}">￥ {#exchangePrice#}</i></span>
+                    <span class="mb5">商品描述 &nbsp;&nbsp;: <i class="color_org">{#productDetails#}</i></span>
                     <span><i class="color_gray"></i></span>
                     <!--                        <span>订单状态 &nbsp;&nbsp;: <i class="color_org">已完成</i></span>
                                             <span>订单日期  &nbsp;&nbsp;: <i class="color_gray">2016-10-20</i></span>-->
