--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -20,7 +20,7 @@
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
 
                     <div class="home_head_info">
-                        <a href="javascript:void(0)" class="mobilenum" id="nickName"></a>
+                        <a href="javascript:void(0)" class="mobilenum" id="nickName" style="font-size: 19px;"></a>
                         <h1 style="font-size: 14px;margin-top: 20px;text-align: left;padding-left: 29px;"><span id="jifen" style="font-size: 17px;">0</span> 积分</h1>
                     </div>
 
