--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -21,7 +21,7 @@
 
                     <div class="home_head_info">
                         <a href="javascript:void(0)" class="mobilenum" id="nickName" style="font-size: 19px;"></a>
-                        <h1 style="font-size: 14px;margin: 20px 0 0 2px;text-align: left;padding-left: 29px;"><span id="jifen" style="font-size: 17px;">0</span> 积分</h1>
+                        <h1 style="font-size: 15px;margin: 20px 0 0 2px;text-align: left;padding-left: 29px;"><span id="jifen">0</span> 积分</h1>
                     </div>
 
                 </div>
