--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -36,8 +36,7 @@
                         <a href="allgoods.html" class="fr color_items more" >查看更多</a>
                     </div>
                 </div>
-                <div class="items_con">
-                    <a href="javascript:void(0)" id="product"></a>
+                <div class="items_con" id="product">
                 </div>
             </div>
             <div class="home_exchange" style="background-color: white;">
@@ -100,52 +99,51 @@
             </div>
         </div>
         <script type="text/html" id="tpl">
-            <dl>
-                <dt><img src="{#img#}"/></dt>
-                <dd class="items_price">￥ {#exchangePrice#}</dd>
-                <dd>{#productName#}</dd>
-            </dl>
+            <div link="{#link#}" class="product" style="width: 33.3%;float: left;">
+                <dl>
+                    <dt><img src="{#img#}"/></dt>
+                    <dd class="items_price">￥ {#exchangePrice#}</dd>
+                    <dd>{#productName#}</dd>
+                </dl>
+            </div>
         </script>
         <script type="text/html" id="mtpl">
-            <option value="{##}">20.0</option>
-        </script>
-        <script type="text/javascript">
-            if(!$.func.getCookie('phone')){
-                location.href = 'login.html';
+        <option value="{##}">20.0</option>
+    </script>
+    <script type="text/javascript">
+        if (!$.func.getCookie('phone')) {
+            location.href = 'login.html';
+        }
+        $('#nickName').html($.func.getCookie('phone'));
+        var src = $.func.getCookie('headImgUrl') === null ? $.func.getCookie('headImgUrl') : '../images/tx.png';
+        $('#avatar').attr('src', src);
+        $.func.homePageProduct();
+        $.func.chargeMoney();
+        $('.submitbtn').on('click', function () {
+            var chargePhone = $('input[name="chargePhone"]').val();
+            if (!chargePhone) {
+                alert('请填写手机');
+                return;
             }
-            $('#nickName').html($.func.getCookie('phone'));
-            var src = $.func.getCookie('headImgUrl') === null ? $.func.getCookie('headImgUrl') : '../images/tx.png';
-            $('#avatar').attr('src', src);
-            $.func.homePageProduct();
-            $.func.chargeMoney();
-            $('.submitbtn').on('click', function () {
-                var chargePhone = $('input[name="chargePhone"]').val();
-                if(!chargePhone){
-                    alert('请填写手机');
-                    return;
-                }
-                var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
-                if(!reg.test(chargePhone)){
-                    alert('请填写正确的手机号码');
-                    return;
-                }
-                var chargeNo = $('input[name="chargeNo"]').val();
-                console.log(chargeNo);
-                if(!chargeNo){
-                    alert('请填写串码');
-                    return;
-                }
-                var chargeMoney = $('select').val();
-                $.func.chargeNo(chargePhone, chargeNo, chargeMoney);
-            });
+            var reg = /^0?1[3|4|5|7|8][0-9]\d{8}$/;
+            if (!reg.test(chargePhone)) {
+                alert('请填写正确的手机号码');
+                return;
+            }
+            var chargeNo = $('input[name="chargeNo"]').val();
+            console.log(chargeNo);
+            if (!chargeNo) {
+                alert('请填写串码');
+                return;
+            }
+            var chargeMoney = $('select').val();
+            $.func.chargeNo(chargePhone, chargeNo, chargeMoney);
+        });
 
-            $('.closed').on('click', function () {
-                $('.tips').hide();
-            });
-            
-            $('#product').on('click', function(){
-                $.func.checkjifen($('#jifen').html(), 'choose_good.html');
-            });
-        </script>
-    </body>
+        $('.closed').on('click', function () {
+            $('.tips').hide();
+        });
+
+    </script>
+</body>
 </html>
