--- a/webroot/mobile/html/jifen/html/exchange_cash.html
+++ b/webroot/mobile/html/jifen/html/exchange_cash.html
@@ -15,6 +15,7 @@
     <body>
         <header>
             <div class="inner">
+                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="history.go(-1)"></h1>
                 <h1>兑换现金</h1>
             </div>
         </header>
