--- a/webroot/mobile/html/wx-download.html
+++ b/webroot/mobile/html/wx-download.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="format-detection" content="telephone=no, email=no" />
-		<meta name="renderer" content="webkit">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-		<title>并购帮-下载</title>
-		<link rel="stylesheet" type="text/css" href="../css/common.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<script src="../js/view.js"></script>
-	</head>
-	<body>
-		<header>
-			<div class='inner'>
-				<a href='javascript:history.go(-1);' class='toback'></a>
-				<h1>活动详情</h1>
-				
-			</div>
-		</header>
-		
-
-		<div class="wraper">
-			<div class="transmitpage clearfix">
-				<div>
-					<h1><img src="../images/logo-wx.png"/></h1>
-					<h3><span>来这里 ，圈子就活了！</span></h3>
-					<a href="wx-download.html" class="green-btn">立即下载</a>
-				</div>
-			</div>
-			<div class="bgb_down_des">
-				<div class="down_app">
-					<div class="down_logo"><img src="../images/logo-wx1.png"/></div>
-					<h1>并购帮</h1>
-					<h3>并购菁英汇出品</h3>
-					<div class="downbtn">
-						<a href="javascript:void(0);" class="downbtn_items ios_down"><i class='iconfont'>&#xe65c;</i>APP Store</a>
-						<a href="javascript:void(0);" class="downbtn_items android_down"><i class='iconfont'>&#xe659;</i>Android</a>
-					</div>
-					<h3 class="down_title_des">海量项目免费对接</h3>
-					<div class="down_logo_bottom"><img src="../images/wx_down.jpg"/></div>
-				</div>
-		</div>
-	</div>
-	<div class="reg-shadow"></div>
-	<div class="sharetowx">
-		<div class="point">
-			<img src="../images/sharetowx.png"/>
-		</div>
-	</div>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="format-detection" content="telephone=no, email=no" />
+        <meta name="renderer" content="webkit">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <title>并购帮-下载</title>
+        <link rel="stylesheet" type="text/css" href="../css/common.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+        <script src="../js/view.js"></script>
+    </head>
+    <body>
+        <header>
+            <div class='inner'>
+                <a href='javascript:history.go(-1);' class='toback'></a>
+                <h1>活动详情</h1>
+            </div>
+        </header>
+        <div class="wraper">
+            <div class="transmitpage clearfix">
+                <div style="width: 100%;">
+                    <h1><img src="../images/logo-wx.png"/></h1>
+                    <h3 style="display: inline-block;"><span>来这里 ，圈子就活了！</span></h3>
+                    <a href="wx-download.html" class="green-btn">立即下载</a>
+                </div>
+            </div>
+            <div class="bgb_down_des">
+                <div class="down_app">
+                    <div class="down_logo"><img src="../images/logo-wx1.png"/></div>
+                    <h1>并购帮</h1>
+                    <h3>并购菁英汇出品</h3>
+                    <div class="downbtn">
+                        <a href="javascript:void(0);" class="downbtn_items ios_down"><i class='iconfont'>&#xe65c;</i>APP Store</a>
+                        <a href="javascript:void(0);" class="downbtn_items android_down"><i class='iconfont'>&#xe659;</i>Android</a>
+                    </div>
+                    <h3 class="down_title_des">海量项目免费对接</h3>
+                    <div class="down_logo_bottom"><img src="../images/wx_down.jpg"/></div>
+                </div>
+            </div>
+        </div>
+        <div class="reg-shadow"></div>
+        <div class="sharetowx">
+            <div class="point">
+                <img src="../images/sharetowx.png"/>
+            </div>
+        </div>
+    </body>
 </html>
